# mini-agent-langfuse

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
skill/: SKILL.md
src/mini_agent_langfuse/: __init__.py  plugin.py  session.py  tracing.py
tests/: test_basic.py  test_turn_detection.py
